--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "minimum-stability": "dev",
     "require": {
     	"php": ">=5.4",
-    	"laravel/framework": ">=5.0",
+    	"laravel/framework": ">=5.0"
     },
     "autoload": {
     	"psr-4" : {
@@ -29,6 +29,6 @@
         }
     },
     "require-dev": {
-    	"phpunit/phpunit": "^7",
+    	"phpunit/phpunit": "^7"
     }
 }
