--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,15 @@
     },
     "require-dev": {
     	"phpunit/phpunit": "^7"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Tridi\\Cekmutasi\\ServiceProvider"
+            ],
+            "aliases": {
+                "Cekmutasi": "Tridi\\Cekmutasi\\Facade"
+            }
+        }
     }
 }
